# lookInnaBook

./: .gitignore  Cargo.toml  Rocket.toml  schema-backup.sql
docs/: design_doc.tex
src/: db.rs  endpoints.rs  main.rs  request_guards.rs  schema.rs
style/: book.css  book_management.css  checkout_page.css  confirm_delete.css  create_publisher_success.css  customer.css  customer_cart.css  error.css  header.css  index.css  login.css  order.css  orders.css  owner_login.css  reports.css
templates/: base.html.tera  book.html.tera  book_management.html.tera  checkout_page.html.tera  confirm_delete.html.tera  create_book.html.tera  create_book_success.html.tera  create_publisher.html.tera  create_publisher_success.html.tera  customer.html.tera  customer_cart.html.tera  delete_success.html.tera  error.html.tera  index.html.tera  login.html.tera  manage_accounts.html.tera  order.html.tera  order_success.html.tera  orders.html.tera  owner_login.html.tera  registration.html.tera  reports.html.tera
