[package]
name = "look_inna_book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.2"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
dotenv = "0.15.0"
serde_json = "1.0.72"
serde = "1.0.130"
rust_decimal = { version = "1.18.0", features = ["db-postgres"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["postgres_pool"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]
