[package]
name = "look_inna_book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = { version = "0.19.2", features = ["with-chrono-0_4"] }
rocket = { version = "0.5.0-rc.1", features = ["json", "secrets"] }
dotenv = "0.15.0"
serde_json = "1.0.72"
serde = "1.0.130"
rust_decimal = { version = "1.18.0", features = ["db-postgres"] }
rand = "0.8.4"
bcrypt = "0.10.1"
chrono = "0.4.19"
base64 = "0.13.0"
rand_chacha = "0.3.1"
thiserror = "1.0.30"
strsim = "0.10.0"
poloto = "3.8.0"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["postgres_pool"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]
